V 6.2.10: Resolved the WebClient column page layout issues.

--- a/evado.uniform.adminclient/css/client.main.css
+++ b/evado.uniform.adminclient/css/client.main.css
@@ -421,9 +421,11 @@ span.required {
 
 .body-column-header {
   display: inline-block;
-  width: 98%;
+  width: 100%;
   margin: 0;
   padding: 0;
+  /*margin-left: 1%;
+  margin-right: 1%;*/
 }
 
 .field-group {
